# lab_6

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: exceptions.py  seed_user.py
app/auth/: models.py  repository.py  router.py  schemas.py  service.py
app/books/: models.py  repository.py  router.py  schemas.py  service.py
app/core/: database.py  dependencies.py  security.py  utils.py
tests/: conftest.py  tests.py
